[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsCommonLib"
version = "0.0.3"
authors = [
  { name="SPVJ", email="jiakup3@gmail.com" },
]
description = "for mocking use only"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SPVJ/common-lib"
Issues = "https://github.com/SPVJ/common-lib"